<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customColorFont"
    tools:context=".ui.eula.EulaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/eula_title"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p2"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p3"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p4"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p5"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p6"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:text="@string/eula_subtitle1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p7"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p8"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:text="@string/eula_subtitle2"
            android:textColor="@color/bg_btn_logout"/>

        <TextView
            android:id="@+id/tv_p9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p9"
            android:textColor="@color/bg_btn_logout"/>

        <TextView
            android:id="@+id/tv_p10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p10"
            android:textColor="@color/bg_btn_logout"/>

        <TextView
            android:id="@+id/tv_subtitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:text="@string/eula_subtitle3"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p11"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/nunito_regular"
            android:textSize="18sp"
            android:text="@string/eula_p12"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_subtitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_p12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_extra_bold"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            android:text="@string/eula_subtitle4"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_p13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/eula_p13"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>